Prod V2/main/default/objects/Pricebook2/fields/Default_Starter_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Default_Starter_Price_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Standard pricebook for new customers</description>
    <label>Default Starter Price Book</label>
    <type>Checkbox</type>
</CustomField>